06-13-24 ivan button fix, spacing fix bricks

--- a/homepage/scripts/mep/ace0861/homepage-brick/homepage-brick.css
+++ b/homepage/scripts/mep/ace0861/homepage-brick/homepage-brick.css
@@ -68,8 +68,8 @@
   margin-right: auto;
   
   /* ace0861 update */
-  padding-left: var(--spacing-xl) !important; 
-  padding-right: var(--spacing-xl) !important;
+  padding-left: var(--spacing-s) !important; 
+  padding-right: var(--spacing-s) !important;
 }
 
 .section.masonry > div:not([class]),
@@ -83,7 +83,8 @@
   padding: var(--spacing-m) var(--spacing-xl);
 }
 
-.section.masonry:not([class*="spacing"]):not([style]) {
+/* ace0861 */
+.section.masonry:not([style]) {
   max-width: 1920px;
 }
 
@@ -128,6 +129,10 @@
 @media screen and (min-width: 1200px) {
   .section.masonry {
     grid-template-columns: repeat(12, 1fr);
+    
+    /* ace0861 update */
+    padding-left: var(--spacing-xl) !important; 
+    padding-right: var(--spacing-xl) !important;
   }
 
   .section.masonry > div { grid-column: span 4; }
@@ -528,32 +533,4 @@ body:not([data-mep-highlight="true"]) .section.masonry [data-removed-manifest-id
   }
 }
 
-/* black buttons */
-.static-buttons .con-button.blue {
-  background: var(--text-color);
-  border-color: var(--text-color);
-  color: var(--color-white);
-}
 
-.static-buttons .con-button.blue:hover,
-.static-buttons .con-button.blue:active {
-  background: var(--color-black);
-  border-color: var(--color-black);
-}
-
-/* white buttons */
-.dark .static-buttons .con-button.blue, 
-.dark.static-buttons .con-button.blue {
-  background: var(--color-white);
-  border-color: var(--color-white);
-  color: var(--text-color);
-}
-
-.dark.static-buttons .con-button.blue:hover,
-.dark .static-buttons .con-button.blue:hover,
-.dark.static-buttons .con-button.blue:active,
-.dark .static-buttons .con-button.blue:active {
-  color: var(--color-black); 
-  background: var(--color-white);
-  border-color: var(--color-white);
-}
